# polymind

./: .env.example  .gitignore  DOC-20260526-WA0004.docx  DOC-20260527-WA0003.docx  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  requirements.txt
backend/core/: analyzer.py  config.py  executor.py  synthesizer.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: MessageBubble.tsx  TransparencyPanel.tsx
frontend/src/store/: chat.ts
src/polymind/cli/: main.py
src/polymind/core/: __init__.py  analyzer.py  benchmark.py  config.py  context.py  executor.py  fallback.py  hardware.py  logging_setup.py  providers.py  scheduler.py  setup_guide.py  synthesizer.py  types.py
src/polymind/tui/: __main__.py  app.py
src/polymind/web/: app.py
src/polymind/web/static/: index.html
tests/: test_analyzer.py  test_benchmark.py  test_cli.py  test_config.py  test_context.py  test_executor.py  test_fallback.py  test_hardware.py  test_profiles.py  test_providers.py  test_scheduler.py  test_setup_guide.py  test_synthesizer.py  test_types.py
tests/integration/: test_benchmark_flow.py  test_data_integrity.py  test_pipeline_flow.py
