[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymind"
version = "0.1.0"
description = "Multi-Specialist LLM Orchestrator — CLI · TUI · Local-First · Hardware-Optimised"
authors = [
    { name = "PolyMind Contributors" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "litellm>=1.40",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
tui = [
    "textual>=1.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
all = [
    "polymind[cli,tui,web]",
]

[project.scripts]
polymind = "polymind.cli.main:app"
polymind-web = "polymind.web.app:main"
polymind-tui = "polymind.tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polymind"]

[tool.hatch.build.targets.sdist]
include = ["src/polymind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
